--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,14 @@
-torch
-easyocr
-torchvision
-supervision==0.18.0
-openai==1.3.5
-transformers
-ultralytics==8.3.70
-azure-identity
-numpy==1.26.4
-opencv-python
-opencv-python-headless
-gradio
-dill
-accelerate
-timm
-einops==0.8.0
-paddlepaddle
-paddleocr
-ruff==0.6.7
-pre-commit==3.8.0
-pytest==8.3.3
-pytest-asyncio==0.23.6
-pyautogui==0.9.54
-streamlit>=1.38.0
-anthropic[bedrock,vertex]>=0.37.1
-jsonschema==4.22.0
-boto3>=1.28.57
-google-auth<3,>=2
-screeninfo
-uiautomation
-dashscope
-groq
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+pydantic>=2.0.0
+requests>=2.31.0
+pillow>=10.0.0
+torch>=2.0.0
+torchvision>=0.15.0
+ultralytics>=8.0.0
+transformers>=4.30.0
+paddlepaddle>=2.5.0
+paddleocr>=2.7.0
+opencv-python>=4.8.0
+numpy>=1.24.0
+matplotlib>=3.7.0
